package de.dhbw.demo.abstracts;

public abstract class AbstractClass {

    public abstract void doSomething();

}
