package de.dhbw.demo.abstracts;

public interface Identifiable {

    String getId();

}
